// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inverted button primary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: background ease 216ms,border-color ease 216ms;
  transition: background ease 216ms,border-color ease 216ms;
  background: #FFFFFF;
  border-color: #FFFFFF;
  color: #096BDB;
  fill: #096BDB;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  background: #096BDB;
  border-color: #096BDB;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  background: #637689;
  border-color: #637689;
  color: #9CA7B4;
  fill: #9CA7B4;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;

exports[`inverted button secondary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: background ease 216ms,border-color ease 216ms;
  transition: background ease 216ms,border-color ease 216ms;
  background: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  background: #FFFFFF;
  color: #001E3E;
  fill: #001E3E;
}

.c0:disabled {
  background: transparent;
  border-color: #637689;
  color: #637689;
  fill: #637689;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;

exports[`standard button danger renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: background ease 216ms,border-color ease 216ms;
  transition: background ease 216ms,border-color ease 216ms;
  background: #FF5E05;
  border-color: #FF5E05;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  background: #BF4704;
  border-color: #BF4704;
}

.c0:disabled {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #C6CDD4;
  border-color: #C6CDD4;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;

exports[`standard button primary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: background ease 216ms,border-color ease 216ms;
  transition: background ease 216ms,border-color ease 216ms;
  background: #001E3E;
  border-color: #001E3E;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  background: #000F1F;
  border-color: #000F1F;
}

.c0:disabled {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #C6CDD4;
  border-color: #C6CDD4;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;

exports[`standard button secondary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: background ease 216ms,border-color ease 216ms;
  transition: background ease 216ms,border-color ease 216ms;
  background: #FFFFFF;
  border-color: #C6CDD4;
  color: #001E3E;
  fill: #001E3E;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  background: #F1F2F4;
}

.c0:disabled {
  color: #C6CDD4;
  fill: #C6CDD4;
  background: #FFFFFF;
  border-color: #C6CDD4;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;
